--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
 		</style>
 	</head>
 	<body>
+    <% include partials/nav.ejs %>
 	 <h1>Hey Node Ninja!</h1>
 	 <p>This is the best HTML document on the internet.</p>
 
