--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -8,6 +8,7 @@
 		</style>
 	</head>
 	<body>
+      <% include partials/nav.ejs %>
 	 <h1>Contact Info</h1>
 	 <p>Here is my contact info.</p>
 	</body>
