Using layout and partians with handlebars

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,11 +2,13 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Example App</title>
+    <title>Node + Handlebars App</title>
+	<link rel="stylesheet" type="text/css" href="/styles.css"/>
 </head>
 <body>
+	{{> nav }}
 
-    {{{body}}}
+    {{{ body }}}
 
 </body>
 </html>
