--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Node + Handlebars App</title>
-	<link rel="stylesheet" type="text/css" href="/styles.css"/>
+	<link rel="stylesheet" type="text/css" href="/assets/styles.css"/>
 </head>
 <body>
 	{{> nav }}
