--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<style type="text/css">
-			body {background: skyblue; font-family: verdana; color: #fff, padding: 30px;}
-			h1 {font-size: 48px; text-transform: uppercase; text-align: center;}
-			p {font-family: impact; font-size: 24px; text-align: center;}
-		</style>
+					<link rel="stylesheet" type="text/css" href="/assets/styles.css"/>
 	</head>
 	<body>
     <% include partials/nav.ejs %>
