--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -1,7 +1,14 @@
-<nav>
-	<ul>
-		<li><a href="/">Home</a></li>
-		<li><a href="/contact">Contact</a></li>
-		<li><a href="/profile/Geoff">Profile</a></li>
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">Navigation</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample03" aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarsExample03">
+        <ul class="navbar-nav mr-auto">
+		<li class="nav-item active"><a href="/" class="nav-link">Home</a></li>
+		<li class="nav-item"><a href="/contact" class="nav-link">Contact</a></li>
+		<li class="nav-item"><a href="/profile/Geoff" class="nav-link">Profile</a></li>
 	</ul>
+  </div>
 </nav>
