--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -9,3 +9,7 @@
 	 	<li> {{ hobby }} </li>
 	 {{/each}}
 	</ul>
+
+	<div class="alert alert-primary" role="alert">
+  This is a primary alert—check it out!
+</div>
