--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -7,5 +7,6 @@
       <% include partials/nav.ejs %>
 	 <h1>Contact Info</h1>
 	 <p>Here is my contact info.</p>
+<p><%= qs.dept %></p>
 	</body>
 </html>
