--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -1,3 +1,18 @@
 	 <h1>Contact</h1>
 	 <p>Follow @djsoulfeggio on Twitter and Instagram</p>
-	 <p>{{qs.dept}}</p>
+
+	 <form id="contact-form">
+	 	<div class="form-group">
+		 	<label for="who">Who do you want to contact?</label>
+		 	<input class="form-control" type="text" name="who" value="{{qs.person}}"/>
+		 </div>
+		 <div class="form-group">
+		 	<label for="department">Which department?</label>
+		 	<input class="form-control" type="text" name="department" value="{{qs.dept}}"/>
+		 </div>
+		 <div class="form-group">
+		 	<label for="email">Your email</label>
+	 		<input class="form-control" type="text" name="email"/>
+	 	</div>
+	 	<input class="btn btn-primary" type="submit" value="submit"/>
+	 </form>
