--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -7,6 +7,14 @@
       <% include partials/nav.ejs %>
 	 <h1>Contact Info</h1>
 	 <p>Here is my contact info.</p>
-<p><%= qs.dept %></p>
+	 <form id+"contact-form">
+	 	<label for="who">Who do you want to contact?</label>
+	 	<input type="text" name="who" value="<%= qs.who %>">
+	 	<label for  ="department">Which Department?</label>
+	 	<input type="text" name="department" value="<%= qs.department %>">
+	 	<label for="email">Your email</label>
+	 	<input type="email" name="email"/>
+	 	<input type="submit" value="submit"/>
+	 </form>
 	</body>
 </html>
