Finishing up with lesson 30 POST handling

--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -14,5 +14,5 @@
 		 	<label for="email">Your email</label>
 	 		<input class="form-control" type="text" name="email"/>
 	 	</div>
-	 	<input class="btn btn-primary" type="submit" value="submit"/>
+	 	<input class="btn btn-primary" type="submit" value="Submit"/>
 	 </form>
