--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,4 +1,12 @@
-body {background: skyblue; font-family: verdana; color: #fff; padding: 30px;}
-h1 {font-size: 48px; text-transform: uppercase; text-align: center;}
-h2 {font-size: 30px; text-transform: uppercase; text-align: center;}
-p, li {font-family: impact; font-size: 24px; text-align: center;}
+@import url('https://fonts.googleapis.com/css?family=Inconsolata|Rubik:900|Quicksand');
+* {
+	font-family: 'Quicksand';
+}
+h1, h2, h3, h4, h5, h6 {
+	font-family: 'Rubik';
+}
+
+body {background: #eee; font-family: verdana; color: #555; padding: 30px;}
+h1 {font-size: 48px; text-align: center;}
+h2 {font-size: 30px;text-align: center;}
+p, li {font-size: 24px; text-align: center;}
